Added routing and footer

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -15,6 +15,9 @@
   font-size: 45px;
   font-weight: 750;
 }
+.nav-link-head{
+  text-decoration: none;
+}
 .search{
   display: flex;
   text-align: center;
@@ -28,14 +31,12 @@
       width: 450px;
 }
 .buttons button{
-  width: 140px;
-  height: 50px;
+  padding: 10px 15px;
   outline: none;
- 
   border: 1px solid #626262;
-  border-radius: 15%;
+  border-radius: 10%;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   background: rgb(45, 45, 218);
 }
@@ -46,6 +47,7 @@
 }
 
 .nav-menu{
+  
   display: flex;
   list-style: none;
   gap: 20px;
@@ -55,8 +57,13 @@
   padding: bottom -10px;
 }
 .nav-menu li{
+  
   display: flex;
   flex-direction: column;
   gap: 3px;
   cursor: pointer;
+}
+.nav-link{
+  text-decoration: none;
+  color: #626262;
 }
