--- a/src/Courses/Courses.css
+++ b/src/Courses/Courses.css
@@ -1,9 +1,21 @@
+.course-heading{
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: -25px;
+    margin-left: 60px;
+    margin-bottom: -30px;
+    
+}
 .card-container{
     display: flex;
     flex-wrap: wrap;
     margin-left: 20rem;
     margin-top: 2rem;
     z-index: -2;
+    
+}
+.card-link{
+    text-decoration: none;
 }
 .card{
     width: 18rem;
@@ -14,12 +26,14 @@
     border-radius: 10px;
     padding-top: 0;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5);
+    
 }
 .card .title{
     font-size: 20px;
     font-weight: 520;
   font-family: "Inter-Regular", Helvetica;
 color: #2e2d2d;
+
 }
 .university{
     display: flex;
