--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -1,10 +1,10 @@
 .sidebar{
     width: 20%;
     position: absolute;
-    
+    margin-top: 45px;
     border-right: 2px solid #e5e5e5;
-    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 45px;
 }
