--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -3,6 +3,7 @@
     position: absolute;
     margin-top: 45px;
     border-right: 2px solid #e5e5e5;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
